# termsfx

./: .editorconfig  .gitignore  .rgignore  Cargo.toml  README.md  compile  odinfmt.json  package-lock.json  release  run
assets/: termsfx.schema.json
src/: cli.rs  main.odin  main.rs
src/audio/: mod.rs
src/cache/: cache.odin
src/cli/: cli.odin
src/client/: mod.rs
src/config/: config.odin  mod.rs
src/daemon/: mod.rs
src/player/: player.odin
src/settings/: mod.rs
src/utils/: paths.odin
